// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveArticleFlag should render the base live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH lfBIaS"
    >
      <div
        class="sc-htpNat kmRZue"
      >
        <div
          class="sc-ifAKCX eodDQv"
        >
          ■
        </div>
        <div>
          <span
            class="sc-bZQynM fRMWFX"
          >
            BASE
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the breaking article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH lfBIaS"
    >
      <div
        class="sc-htpNat kmRZue"
      >
        <div
          class="sc-ifAKCX eodDQv"
        >
          ■
        </div>
        <div>
          <span
            class="sc-bZQynM fRMWFX"
          >
            BREAKING
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH lfBIaS"
    >
      <div
        class="sc-htpNat kmRZue"
      >
        <div
          class="sc-ifAKCX eodDQv"
        >
          ■
        </div>
        <div>
          <span
            class="sc-bZQynM fRMWFX"
          >
            LIVE
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
